[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Chakra_Petch/ChakraPetch-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Chakra_Petch/ChakraPetch-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
position = Vector2( 360, 540 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.5
margin_top = -280.0
margin_right = 359.5
margin_bottom = -113.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 225.0
margin_right = 65.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "REPLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = 300.0
margin_right = 74.5
margin_bottom = 348.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = 375.0
margin_right = 41.5
margin_bottom = 423.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="ToMenuButton" to="." method="_on_ToMenuButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
